<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mobile_connect.ConnectFragment"
    android:orientation="vertical"
    android:background="@color/colorgris">




    <ImageView
        android:id="@+id/image_3"
        android:layout_width="220dp"
        android:layout_height="49dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="78dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="77dp"
        android:background="@drawable/logo"
        android:backgroundTint="@color/colorbackground2"/>


    <TextView
        android:id="@+id/hithere"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="188dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/hithere"
        android:textAppearance="@style/hithere"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_3" />


    <TextView
        android:fontFamily="@font/quicksand"
        android:id="@+id/create_an_a"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:text="@string/address"
        android:textAppearance="@style/create_an_a"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/hithere"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"/>





    <EditText
        android:fontFamily="@font/quicksand"
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/weneed"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:background="@drawable/rectangle_c"/>







    <Button
        android:id="@+id/btnSend"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:textSize="49px"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/rectangle"
        />








    <TextView
        android:id="@+id/createcompte"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_centerVertical="true"
        android:text="@string/createcompte"
        android:textColor="@color/secondary_color"
        android:textSize="15dp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/hithere"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="120dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"/>
</LinearLayout>