<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="8dp">

        <ImageView
                android:id="@+id/image_view1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add_black_24dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"/>

        <TextView
                android:id="@+id/text_view1"
                android:text="@string/create_new_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

    </LinearLayout>


    <View
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#EAECEF"/>


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="8dp">

        <ImageView
                android:id="@+id/image_view2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"/>

        <TextView
                android:id="@+id/text_view2"
                android:text="@string/modify_existing_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#EAECEF"/>


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="8dp">

        <ImageView
                android:id="@+id/image_view3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"/>

        <TextView
                android:id="@+id/text_view3"
                android:text="@string/delete_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

    </LinearLayout>
    <View
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#EAECEF"/>


    <LinearLayout
            android:id="@+id/btnHistorique"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="8dp">

        <ImageView
                android:id="@+id/image_view4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_history_black_24dp"
                 android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"/>

        <TextView
                android:id="@+id/text_view4"
                android:text="@string/historique_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#EAECEF"/>



</LinearLayout>
